# starlinks.io

./: CMakeLists.txt  README.md  api.cpp
examples/: add_shortcut.cpp  create_link.cpp  edit_link.cpp
starlinks-lib/: Starlinks.cpp  Starlinks.hpp  Stringlinks.cpp
starlinks-lib/entities/: Click.cpp  Click.hpp  Domain.cpp  Domain.hpp  Link.cpp  Link.hpp  Shortcut.cpp  Shortcut.hpp  Token.cpp  Token.hpp  entity.hpp
starlinks-lib/network/: Requests.cpp  Requests.hpp  netClick.cpp  netClick.hpp  netDomain.cpp  netDomain.hpp  netLink.cpp  netLink.hpp  netShortcut.cpp  netShortcut.hpp  netToken.cpp  netToken.hpp
